# clasp

./: .gitignore  Cargo.toml  README.md
.github/: settings.yml
.github/workflows/: ci.yml
clasp-python/: Cargo.toml  README.md  pyproject.toml  rank_fusion.pyi
clasp-python/src/: lib.rs
clasp-python/tests/: __init__.py  test_fusion.py
crates/clasp-wasm/: Cargo.toml  README.md
crates/rankops-wasm/: Cargo.toml  README.md
crates/rankops-wasm/src/: lib.rs
examples/: diversity.rs  fusion.rs  rerank_maxsim.rs
proptest-regressions/rerank/: colbert.txt
rankops-python/: Cargo.toml  README.md  pyproject.toml  rankops.pyi
rankops-python/src/: lib.rs
rankops-python/tests/: __init__.py  test_fusion.py
src/: lib.rs  proptests.rs
src/rerank/: colbert.rs  diversity.rs  diversity_extended.rs  embedding.rs  explain.rs  matryoshka.rs  mod.rs  quantization.rs  scoring.rs  simd.rs
