[package]
name = "clasp-python"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
authors = ["Arc <attobop@gmail.com>"]
description = "Python bindings for clasp (rank fusion)"
repository = "https://github.com/arclabs561/clasp"
readme = "README.md"
publish = false

[lib]
name = "clasp_py"
crate-type = ["rlib"]
doc = false

[dependencies]
clasp = { path = ".." }
pyo3 = "0.28"

[workspace]
resolver = "2"

