[package]
name = "clasp-python"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
authors = ["Arc <attobop@gmail.com>"]
description = "Python bindings for rankops (Rust). PyPI package name: clasp."
repository = "https://github.com/arclabs561/rankops"
readme = "README.md"
publish = false

[lib]
name = "clasp_py"
crate-type = ["rlib"]
doc = false

[dependencies]
rankops = { path = ".." }
pyo3 = "0.28"

[workspace]
resolver = "2"

